results/SpecGenBench/4-shot/log-UniqueChar-2023_11_05_21_57_35.txt
import java.util.HashMap;
import java.util.Map;

class UniqueChar {
    //@ requires s != null;
    //@ ensures \result >= -1 && \result < s.length();
    public int firstUniqChar(String s) {
        Map<Character, Integer> frequency = new HashMap<Character, Integer>();
        //@ maintaining 0 <= i && i <= s.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; frequency.get(s.charAt(j)) == (\old(frequency.get(s.charAt(j))) + 1));
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            char ch = s.charAt(i);
            frequency.put(ch, frequency.getOrDefault(ch, 0) + 1);
        }
        //@ maintaining 0 <= i && i <= s.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; frequency.get(s.charAt(j)) == (\old(frequency.get(s.charAt(j))) + 1));
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            if (frequency.get(s.charAt(i)) == 1) {
                return i;
            }
        }
        return -1;
    }
}
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:10: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; frequency.get(s.charAt(j)) == (\old(frequency.get(s.charAt(j))) + 1));
                                                                                             ^
  symbol:   variable frequency
  location: class UniqueChar
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:17: error: cannot find symbol
        //@ maintaining (\forall int j; 0 <= j && j < i; frequency.get(s.charAt(j)) == (\old(frequency.get(s.charAt(j))) + 1));
                                                                                             ^
  symbol:   variable frequency
  location: class UniqueChar
2 errors

